--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,15 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 h1,
 p {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.mainContent {
+  margin: auto;
+  text-align: center;
 }
